# Basic-Rendering-Program

./: CMakeLists.txt  README.md
assets/shaders/: fragment.glsl  sprite_fragment.glsl  vertex.glsl
include/: app.h  camera.h  file_reader.h  logger.h  renderer.h  shader.h  shapes.h  texture_loader.h  window.h
include/Components/: sprite.h
src/: app.cpp  camera.cpp  file_reader.cpp  main.cpp  renderer.cpp  shader.cpp  texture_loader.cpp  window.cpp
src/Components/: sprite.cpp
